--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -85,7 +85,7 @@ $(document).ready(function(){
     <div class="big_canvas">
        <nav class="navbar-own">
           <ul class="topnav">
-            <li><a  href="#"><img class="logo" src="/redthread/assets/logo/LOGO.svg"> </a></li>
+            <li><a  href="#"><img class="logo" src="https://redthreadarchitects.github.io/redthread/assets/logo/LOGO.svg"> </a></li>
             <li class="right"><a class="about-link" href="#about"> <div class="navbar-about-btn">About</div></a></li>
           </ul>
        </nav>
