--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -236,7 +236,7 @@ $(document).ready(function(){
          <div class=" tranparent_layer jumbotron">
           <div class="container">
            <div class=" text-center logo_center">
-              <img class="text-center" src="/Users/sampada/Desktop/redthread/assets/logo/LOGO.jpg" width="50" height="50">
+              <img class="text-center" src="assets/logo/LOGO.JPG" width="50" height="50">
            </div>
            <div class=" text-center">
               <div class="design_firms">Redthread bridges the gap<br/> between creative talent and top architecture firms</div> <br/>
