--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -171,17 +171,17 @@ $(document).ready(function(){
          <h1 class="text-center sub_heading">this architect’s ecosystem includes… </h1>
          <div class="row">
            <div class="col-lg-4">
-             <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/1.svg" alt="Generic placeholder image" width="35" height="35">
+             <img class=" img_thumbnail" src="assets/logo/1.svg" alt="Generic placeholder image" width="35" height="35">
              <h2 class="video-title">Right Job </h2>
              <p class="video_excerpt">Build your profile, sync and publish.We take the criteria you put into your profile and search our network for perfect opportunities, that match your needs based on your style,  location and more. </p>
            </div><!-- /.col-lg-4 -->
            <div class="col-lg-4">
-             <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/2.svg" alt="Generic   placeholder image" width="35" height="35">
+             <img class=" img_thumbnail" src="assets/logo/2.svg" alt="Generic   placeholder image" width="35" height="35">
              <h2 class="video-title">Right Candidate</h2>
              <p class="video_excerpt">Custom recommendations for each job you post. From interns, junior architects to practised professionals, we'll recommend the right creative talent  based on your style, location and more.</p>  
            </div><!-- /.col-lg-4 -->
            <div class="col-lg-4">
-             <img class="" src="/Users/sampada/Desktop/redthread/assets/logo/3.svg" alt="Generic  placeholder image" width="35" height="35">
+             <img class="" src="assets/logo/3.svg" alt="Generic  placeholder image" width="35" height="35">
              <h2 class="video-title">Portfolio I Resume </h2>
              <p class="video_excerpt">Meticulously curated portfolios and a comprehensive resource of project examples. Bookmark or rate your favorite portfolios to convey your interest in a firm or a candidate. </p>
            </div><!-- /.col-lg-4 -->
@@ -190,17 +190,17 @@ $(document).ready(function(){
 
          <div class="row">
            <div class="col-lg-4">
-             <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/4.svg" alt="Generic placeholder image"  width="35" height="35">
+             <img class=" img_thumbnail" src="assets/logo/4.svg" alt="Generic placeholder image"  width="35" height="35">
             <h2 class="video-title">Great Projects  </h2>
             <p class="video_excerpt">Most  ideal platform for freelancers. By matching your scope of work  with needs of clients, we will align suitable projects for you to associate with.</p>  
            </div><!-- /.col-lg-4 -->
            <div class="col-lg-4">
-             <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/5.svg" alt="Generic placeholder image" width="35" height="35">
+             <img class=" img_thumbnail" src="assets/logo/5.svg" alt="Generic placeholder image" width="35" height="35">
              <h2 class="video-title">Inspiration </h2>
              <p class="video_excerpt">Watch. Reflect. Apply.Our exclusive interviews with acclaimed architects will give you the much-needed inspiration to push your boundaries.</p>    
            </div><!-- /.col-lg-4 -->
            <div class="col-lg-4">
-             <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/6.svg" alt="Generic placeholder image" width="35" height="35">
+             <img class=" img_thumbnail" src="assets/logo/6.svg" alt="Generic placeholder image" width="35" height="35">
              <h2 class="video-title">Happenings</h2>
              <p class="video_excerpt">A one-stop destination to keep track of various competitions, workshops and events in the city. With us, you always remain in the loop.</p>
            </div><!-- /.col-lg-4 -->
@@ -209,17 +209,17 @@ $(document).ready(function(){
 
         <div class="row">
            <div class="col-lg-4">
-             <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/7.svg" alt="Generic placeholder image"  width="35" height="35">
+             <img class=" img_thumbnail" src="assets/logo/7.svg" alt="Generic placeholder image"  width="35" height="35">
              <h2 class="video-title">Listings  </h2>
             <p> class="video_excerpt"Listings of all the architectural firms and design  schools — established or upcoming — in the country. </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/8.svg" alt="Generic placeholder image" width="35" height="35">
+            <img class=" img_thumbnail" src="assets/logo/8.svg" alt="Generic placeholder image" width="35" height="35">
             <h2 class="video-title">Materials I Services  </h2>
             <p class="video_excerpt">Hosting a verified list of building materials/suppliers. Includes a database of MEP consultants for different scaled projects.</p>  
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class=" img_thumbnail" src="/Users/sampada/Desktop/redthread/assets/logo/9.svg" alt="Generic placeholder image" width="35" height="35">
+            <img class=" img_thumbnail" src="assets/logo/9.svg" alt="Generic placeholder image" width="35" height="35">
             <h2 class="video-title">Network</h2>
             <p class="video_excerpt">Be a part of a cohesive community of architects, designers, top creative firms, mentors and contractors. </p>
           </div><!-- /.col-lg-4 -->
@@ -268,8 +268,8 @@ $(document).ready(function(){
             <div class="col-lg-4 text-center social_connect">
               Contact Us
               <div> 
-                <a href="mailto:redthreadarchitects@gmail.com"><img class="img_align" src="/Users/sampada/Desktop/redthread/assets/logo/gmail.svg" alt="Generic placeholder image" width="100" height="100">  
-                <a href="https://www.facebook.com/ArchitectsEcosystem/photos/a.776686682465776.1073741825.776607129140398/776686689132442/?type=3&source=11"><img class="img_align" src="/Users/sampada/Desktop/redthread/assets/logo/facebook.svg" alt="Generic placeholder image" width="100" height="100">  </a> 
+                <a href="mailto:redthreadarchitects@gmail.com"><img class="img_align" src="assets/logo/gmail.svg" alt="Generic placeholder image" width="100" height="100">  
+                <a href="https://www.facebook.com/ArchitectsEcosystem/photos/a.776686682465776.1073741825.776607129140398/776686689132442/?type=3&source=11"><img class="img_align" src="assets/logo/facebook.svg" alt="Generic placeholder image" width="100" height="100">  </a> 
               </div>
             </div>
           
