--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -85,7 +85,7 @@ $(document).ready(function(){
     <div class="big_canvas">
        <nav class="navbar-own">
           <ul class="topnav">
-            <li><a  href="#"><img class="logo" src="assets/Logo/logo.SVG"> </a></li>
+            <li><a  href="#"><img class="logo" src="assets/logo/logo.SVG"> </a></li>
             <li class="right"><a class="about-link" href="#about"> <div class="navbar-about-btn">About</div></a></li>
           </ul>
        </nav>
@@ -236,7 +236,7 @@ $(document).ready(function(){
          <div class=" tranparent_layer jumbotron">
           <div class="container">
            <div class=" text-center logo_center">
-              <img class="text-center" src="assets/logo/LOGO.JPG" width="50" height="50">
+              <img class="text-center" src="assets/logo/LOGO.jpg" width="50" height="50">
            </div>
            <div class=" text-center">
               <div class="design_firms">Redthread bridges the gap<br/> between creative talent and top architecture firms</div> <br/>
