--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -94,8 +94,8 @@ $(document).ready(function(){
     
       <div class="container">
         <div class="featured"> 
-          <p class="latest-interview-label">Latest interview</p>
-          <h1 class="interview-name">Dominic Dube</h1>
+          <p class="latest-interview-label">latest interview</p>
+          <h1 class="interview-name">Dominic <span class="name-light">Dube</span></h1>
           <p class="interview-designation">Principal architect of DDIR</p>
           <a  class="interview-link" href="#main_interview"><div class="interview-btn">Watch interview</div></a>
         </div>
