--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -260,7 +260,7 @@ $(document).ready(function(){
 
          <div class="row">
          
-            <div class="col-lg-4  text-center sentence">
+            <div class="col-lg-4  text-left sentence">
               Quit wandering. <br/>Start connecting.
             </div>
             <div class="col-lg-4 text-center social_connect">
