hurray im not done

--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -213,7 +213,7 @@ $(document).ready(function(){
            <div class="col-lg-4">
              <img class=" img_thumbnail img_about_us_7 " src="assets/logo/7.svg" alt="Generic placeholder image"  width="35" height="35">
              <h2 class="video-title">Listings  </h2>
-            <p> class="video_excerpt"Listings of all the architectural firms and design  schools — established or upcoming — in the country. </p>
+            <p class="video_excerpt">Listings of all the architectural firms and design  schools — established or upcoming — in the country. </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class=" img_thumbnail img_about_us_8 " src="assets/logo/8.svg" alt="Generic placeholder image" width="35" height="35">
