--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -118,7 +118,7 @@ $(document).ready(function(){
     <!-- video playlist -->
      
     <div class="playlist_container">  
-     <!-- <div class="container"> -->
+      <div class="container"> 
         <h1 class="text-center sub_heading"> Interviews </h1>
         <div class="row">
         <!--row 1 -->
@@ -242,9 +242,9 @@ $(document).ready(function(){
            </div>
            <div class=" text-center">
               <div class="design_firms">Redthread bridges the gap<br/> between creative talent and top architecture firms</div> <br/>
-              <div class="design_firms"><div class="four-hundred">400+</div> <div class="design_firms"> design schools</div><br/>
+              <div class="design_firms"><div class="four-hundred">400+  </div> <div class="design_firms"> design schools</div><br/>
                  <div class="four-hundred">10,000+  </div> <div class="design_firms"> architecture firms</div><br/>
-                 <div class="four-hundred">40,000+</div><div class="design_firms">architects graduate/year</div></div>
+                 <div class="four-hundred">40,000+  </div> <div class="design_firms"> architects graduate/year</div></div>
             </div>
           </div><!--conatiner-->
         </div><!--</div>--><!--jumbotron-->
@@ -269,8 +269,8 @@ $(document).ready(function(){
             <div class="col-lg-4 text-center social_connect">
               <div class="contact_word">Contact Us</div>
               <div> 
-                <a href="mailto:redthreadarchitects@gmail.com"><img class="img_align" src="assets/logo/gmail.svg" alt="Generic placeholder image" width="80" height="80">  
-                <a href="https://www.facebook.com/ArchitectsEcosystem/photos/a.776686682465776.1073741825.776607129140398/776686689132442/?type=3&source=11"><img class="img_align" src="assets/logo/facebook.svg" alt="Generic placeholder image" width="80" height="80">  </a> 
+                <a href="mailto:redthreadarchitects@gmail.com"><img class="img_align" src="assets/logo/gmail.svg" alt="Generic placeholder image" width="60" height="60">  
+                <a href="https://www.facebook.com/ArchitectsEcosystem/photos/a.776686682465776.1073741825.776607129140398/776686689132442/?type=3&source=11"><img class="img_align" src="assets/logo/facebook.svg" alt="Generic placeholder image" width="60" height="60">  </a> 
               </div>
             </div>
           
