--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -266,10 +266,10 @@ $(document).ready(function(){
               <img class="text-center" src="assets/logo/LOGO.jpg" width="50" height="50">
            </div>
            <div class=" text-center">
-              <div class="design_firms">Redthread bridges the gap<br/> between creative talent and top architecture firms</div> <br/>
-              <div class="design_firms"><div class="four-hundred">400+  </div> <div class="design_firms"> design schools</div><br/>
-                 <div class="four-hundred">10,000+  </div> <div class="design_firms"> architecture firms</div><br/>
-                 <div class="four-hundred">40,000+  </div> <div class="design_firms"> architects graduate/year</div></div>
+              <h4>Redthread bridges the gap<br/> between creative talent and top architecture firms</h4> <br/>
+                 <h1>400+  </h1> <h4> design schools</h4><br/>
+                 <h1>10,000+  </h1> <h4> architecture firms</h4><br/>
+                 <h1>40,000+  </h1> <h4> architects graduate/year</h4>
             </div>
           </div><!--</div>--><!--jumbotron-->
         </div><!--</div>--><!--redthread-facts-->
