updated facebook instagram link

--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -291,8 +291,8 @@ $(document).ready(function(){
             <div class="col-md-6 col-lg-6 col-sm-6 text-center social_connect">
               <h1 >Contact Us</h1>
               <div> 
-                <a href="www.instagram.com"><img class="img_align" src="assets/logo/instagram.svg" alt="Generic placeholder image" width="50" height="50">  </a>
-                <a href="https://www.facebook.com/ArchitectsEcosystem/photos/a.776686682465776.1073741825.776607129140398/776686689132442/?type=3&source=11"><img class="img_align" style="margin-left: 5px; " src="assets/logo/facebook.svg" alt="Generic placeholder image" width="50" height="50">  </a> 
+                <a href="https://www.instagram.com/redthreadarchitects/"><img class="img_align" src="assets/logo/instagram.svg" alt="Generic placeholder image" width="50" height="50">  </a>
+                <a href="https://www.facebook.com/redthreadarchitects/"><img class="img_align" style="margin-left: 5px; " src="assets/logo/facebook.svg" alt="Generic placeholder image" width="50" height="50">  </a> 
               </div>
             </div>
       </div> <!--container-->
