--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -192,7 +192,7 @@ $(document).ready(function(){
    </div>
     </ul>-->
 
-    <div class="details" style="position:absolute; ">
+    <div class="details" >
       <div class="container" style="position:relative;padding-top:0px;padding-bottom:0px;" >
 
         <div class=" featured"> 
@@ -327,28 +327,28 @@ $(document).ready(function(){
              <h2>Right Job </h2>
              <p>Build your profile, sync and publish. We take the criteria you put into your profile and search our network for perfect opportunities, that match your needs based on your style,  location and more. </p>
            </div><!-- /.col-lg-4 -->
-           <div class="col-sm-12 col-md-4 col-lg-4">
+           <div class="col-sm-12 col-md-4 col-lg-4" >
              <img class=" img_thumbnail img_about_us_2" src="assets/logo/2.svg" alt="Generic   placeholder image" width="35" height="35">
              <h2>Right Candidate</h2>
              <p>Custom recommendations for each job you post. From interns, junior architects to practised professionals, we'll recommend the right creative talent  based on your style, location and more.</p>  
            </div><!-- /.col-lg-4 -->
-           <div class=" col-sm-12 col-md-4 col-lg-4">
+           <div class=" col-sm-12 col-md-4 col-lg-4" >
              <img class="img_thumbnail img_about_us_3" src="assets/logo/3.svg" alt="Generic  placeholder image" width="35" height="35">
              <h2>Portfolio I Resume </h2>
              <p>Meticulously curated portfolios and a comprehensive resource of project examples. Bookmark or rate your favorite portfolios to convey your interest in a firm or a candidate. </p>
            </div><!-- /.col-lg-4 -->
         
-           <div class=" col-sm-12 col-md-4  col-lg-4">
+           <div class=" col-sm-12 col-md-4  col-lg-4" >
              <img class=" img_thumbnail img_about_us_4 " src="assets/logo/4.svg" alt="Generic placeholder image"  width="35" height="35">
             <h2>Great Projects  </h2>
             <p>Most  ideal platform for freelancers. By matching your scope of work  with needs of clients, we will align suitable projects for you to associate with.</p>  
            </div><!-- /.col-lg-4 -->
-           <div class="col-sm-12 col-md-4 col-lg-4">
+           <div class="col-sm-12 col-md-4 col-lg-4" >
              <img class=" img_thumbnail img_about_us_5 " src="assets/logo/5.svg" alt="Generic placeholder image" width="35" height="35">
              <h2>Inspiration </h2>
              <p>Watch. Reflect. Apply. Our exclusive interviews with acclaimed architects will give you the much-needed inspiration to push your boundaries.</p>    
            </div><!-- /.col-lg-4 -->
-           <div class="col-sm-12 col-md-4 col-lg-4">
+           <div class="col-sm-12 col-md-4 col-lg-4" >
              <img class=" img_thumbnail img_about_us_6 " src="assets/logo/6.svg" alt="Generic placeholder image" width="35" height="35">
              <h2>Happenings</h2>
              <p>A one-stop destination to keep track of various competitions, workshops and events in the city. With us, you always remain in the loop.</p>
@@ -357,12 +357,12 @@ $(document).ready(function(){
 
 
           <!--<div class="row">-->
-           <div class="col-sm-12 col-md-4 col-lg-4">
+           <div class="col-sm-12 col-md-4 col-lg-4" >
              <img class=" img_thumbnail img_about_us_7 " src="assets/logo/7.svg" alt="Generic placeholder image"  width="35" height="35">
              <h2>Listings  </h2>
             <p>Listings of all the architectural firms and design  schools —established or upcoming— in the country. </p>
           </div><!-- /.col-lg-4 -->
-          <div class="col-sm-12 col-md-4  col-lg-4">
+          <div class="col-sm-12 col-md-4  col-lg-4" >
             <img class=" img_thumbnail img_about_us_8 " src="assets/logo/8.svg" alt="Generic placeholder image" width="35" height="35">
             <h2>Materials I Services  </h2>
             <p>Hosts a verified list of building materials/suppliers. Includes a database of MEP consultants for different scaled projects.</p>  
