fixed almost everything

--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -41,6 +41,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/jpg" href="assets/logo/LOGO.jpg"/>
+   
+
  <!--   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -238,7 +241,7 @@ $(document).ready(function(){
 
                   <iframe src="https://www.youtube.com/embed/8f_MLtcoLRs?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
-                 <h2 class="text-left ">In conversation with Dominic Dube <span> DDIR   I   Full - Interview </span>  </h2>
+                 <h2 class="text-left ">In Conversation with Dominic Dube <span> DDIR   I   Full - Interview </span>  </h2>
                  <p class="text-left video-excerpt"></p>
           </div>
          
@@ -248,7 +251,7 @@ $(document).ready(function(){
              <div class="embed-responsive embed-responsive-16by9 embed-responsive embed-responsive-16by9 ">
                   <iframe   src="https://www.youtube.com/embed/1V5PqamX21Y?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
-                 <h2 class="text-left ">In conversation with Dominic Dube <span> DDIR I Interview - Trailer  </span></h2>
+                 <h2 class="text-left ">In Conversation with Dominic Dube <span> DDIR I Interview - Trailer  </span></h2>
                   <p class="text-left video-excerpt"></p>
           </div>
 
@@ -256,7 +259,7 @@ $(document).ready(function(){
              <br />
              <div class="embed-responsive embed-responsive-16by9">
                  <iframe  src="https://www.youtube.com/embed/kN_hAx623r8?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>  </div>
-                 <h2 class="text-left ">In conversation with Cyrus & Eliza <span>  Collective Project I Full - Interview </span></h2>
+                 <h2 class="text-left ">In Conversation with Cyrus & Eliza <span>  Collective Project I Full - Interview </span></h2>
             <p class="text-left video-excerpt"></p>
           </div>
 
@@ -265,7 +268,7 @@ $(document).ready(function(){
              <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u0A5hf5nqU4?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
-                 <h2 class="text-left ">In conversation with Cyrus & Eliza <span>  Collective Project I Interview - Trailer  </span></h2>
+                 <h2 class="text-left ">In Conversation with Cyrus & Eliza <span>  Collective Project I Interview - Trailer  </span></h2>
             <p class="text-left video-excerpt"></p>
           </div>
           <div class="col-lg-4   col-xs-12 col-sm-6 col-md-4  ">
@@ -273,7 +276,7 @@ $(document).ready(function(){
              <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lQFvCMp-I8E?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
-                 <h2 class="text-left ">In Conversation with Ar.Venkatesh <span> Étendre I Full - Interview  </span></h2>
+                 <h2 class="text-left ">In Conversation with  Venkatesh <span> Étendre I Full - Interview  </span></h2>
                  <p class="text-left video-excerpt"></p>
               </div>
 
@@ -282,7 +285,7 @@ $(document).ready(function(){
              <div class="embed-responsive embed-responsive-16by9">
                   <iframe  src="https://www.youtube.com/embed/YFPS2D5Qnio?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
-                 <h2 class="text-left ">In conversation with Ar.Venkatesh <span> Étendre I Interview - Trailer  </span></h2>
+                 <h2 class="text-left ">In Conversation with  Venkatesh <span> Étendre I Interview - Trailer  </span></h2>
                   <p class="text-left video-excerpt"></p>
               </div>
 
@@ -291,7 +294,7 @@ $(document).ready(function(){
              <div class="embed-responsive embed-responsive-16by9">
                   <iframe  src="https://www.youtube.com/embed/pQzmS4KL_fo?showinfo=0&amp;modestbranding=0&amp;vq=&amp;rel=0" frameborder="0" allowfullscreen></iframe>
               </div>
-                 <h2 class="text-left ">In Conversation with Akshay & Aditi <span> Purple Ink Studio | Full Interview  </span></h2>
+                 <h2 class="text-left ">In Conversation with Akshay & Aditi <span> Purple Ink Studio | Full - Interview  </span></h2>
                   <p class="text-left video-excerpt"></p>
               </div>
 
