fixed almost everything

--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -133,7 +133,7 @@ $(document).ready(function(){
               <li><a class="active" href="https://redthreadarchitects.github.io/redthread/redthread.html"><img  class="logo" src="assets/logo/logo.svg" ></a></li>
              <!-- <li><a href="#"><h3>LOGIN</h3></a></li>
               <li><a href="#"><h3>SIGNUP</h3></a></li> -->
-              <li><a href="#contact"><h3>CONTACT</h3></a></li>
+              <li><a href="#contact"><h3>FOLLOW US</h3></a></li>
               <li><a href="#about"><h3>ABOUT</h3></a></li>
               <li><a href="#interviews"><h3>INTERVIEWS</h3></a></li>
              <!-- <li><a href="#"><h3>PORTFOLIOS</h3></a></li>
@@ -161,7 +161,7 @@ $(document).ready(function(){
             <li><a href="#interviews"><h3>INTERVIEWS</h3></a></li>
             <!--<li><a href="#"><h3>PORTFOLIOS</h3></a></li> -->
             <li><a href="#about"><h3>ABOUT</h3></a></li>
-            <li><a href="#contact"><h3>CONTACT</h3></a></li>
+            <li><a href="#contact"><h3>FOLLOW US</h3></a></li>
             
             <!-- <li><a href="#"><h3>SIGNUP</h3></a></li> -->
          </ul >
@@ -199,9 +199,9 @@ $(document).ready(function(){
       <div class="container" style="position:relative;padding-top:0px;padding-bottom:0px;" >
 
         <div class=" featured"> 
-          <span  class="f2">In conversation with</span>          
+          <span  class="f2">In Conversation with</span>          
           <span class="f1">Dominic Dube</span>
-          <span class="f2">Principal architect of DDIR</span>
+          <span class="f2">Principal Architect of DDIR</span>
           <a  class="interview-link" href="#main_interview"><div class="interview-btn "><h3>WATCH INTERVIEW</h3></div></a>
         </div>
 
