fixed almost everything

--- a/redthread/redthread.html
+++ b/redthread/redthread.html
@@ -124,7 +124,7 @@ $(document).ready(function(){
 
   <body>
 
-  
+   <div class="all">
     <div class="big_canvas">
       <nav class="main"  >
          <div class="container" >
@@ -209,6 +209,7 @@ $(document).ready(function(){
       </div> <!---container -->
     </div>
     </div>  <!---bigcanvas end -->
+   </div><!--all-->
   
     <div class="main-interview-frame" id="main_interview">
       <div class="container"> <!-- cover ---->
